[package]
name = "mcp-mesh"
version.workspace = true
edition.workspace = true

[dependencies]
# 异步运行时:timeout 超时控制 + spawn 后台订阅 + JoinSet 并发 fanout
tokio = { workspace = true }
# 配置与类型序列化(#[derive(Serialize, Deserialize)])
serde = { workspace = true, features = ["derive"] }
# 应用层错误(顶层调用方使用,库层用 thiserror)
anyhow = { workspace = true }
# 库层错误类型标准(§4.1:库层用自定义 thiserror enum)
thiserror = { workspace = true }
# 结构化日志(事件发布失败、超时回滚告警)
tracing = { workspace = true }
# UUIDv7 事务 ID 生成(时间有序,便于追溯)
uuid = { workspace = true }
# 时间戳(事务创建时刻、心跳探活)
chrono = { workspace = true }
# 并发安全服务器注册表(O(1) 分片查找)
dashmap = { workspace = true }
# L1 Core:跨层通信唯一通道,发布 McpMeshTransactionCompleted 事件、订阅 ChtcToolCallReceived
event-bus = { path = "../event-bus" }

[dev-dependencies]
# 性能基准框架(SubTask 1.7)
criterion = { workspace = true }
# JSON 序列化测试(config serde 往返)
serde_json = { workspace = true }

# 性能基准配置:harness=false 以使用 criterion 自定义 main
[[bench]]
name = "mesh_benchmark"
harness = false
