[package]
name = "model-router"
version.workspace = true
edition.workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
event-bus = { path = "../event-bus" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# v1.3.0 S2:InMemoryHistoryStore 并发安全历史存储(model_id → HistoryRecord)
# WHY DashMap:L1 Core 工具依赖,符合 §2.2 依赖铁律;并发读写无锁,适合路由热路径
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# 性能基准框架(Phase III-2:验证 RwLock<HashMap> 在小规模注册表下的吞吐)
criterion = { workspace = true }
# 属性测试框架 — CACR 预算检查不变量验证
proptest = { workspace = true }

# ModelRegistry 读写并发基准(SubTask III-2.3)
# harness = false:使用 criterion 自定义 main,而非默认 test harness
[[bench]]
name = "registry_bench"
harness = false

# MoE 稀疏门控路由延迟基准(Task 3 [I1]:对比 O(n) 全量 vs O(k) Top-K)
# 对比全量评估 vs Top-K 门控在 50/100/200 模型规模下的 route_auto 延迟
[[bench]]
name = "moe_bench"
harness = false
