[package]
name = "pvl-layer"
version.workspace = true
edition.workspace = true

[dependencies]
# L1 Core:提供 id_newtype! 宏(生成 OperationId newtype)
nexus-core = { path = "../nexus-core" }
# L1 Core:跨层通信唯一通道,发布 OperationProduced/PredictionVerified/ProducerStrategyAdjusted 事件
event-bus = { path = "../event-bus" }
# 异步运行时:tokio::sync::mpsc 通道(Producer→Verifier→Feedback 单向流)
tokio = { workspace = true }
# 配置与类型序列化(#[derive(Serialize, Deserialize)])
serde = { workspace = true, features = ["derive"] }
# 库层错误类型标准(§4.1:库层用自定义 thiserror enum)
thiserror = { workspace = true }
# 结构化日志(事件发布失败告警)
tracing = { workspace = true }
# UUIDv7 操作 ID 生成(时间有序,便于追溯)
uuid = { workspace = true }
# 时间戳(事件元数据)
chrono = { workspace = true }
# 内容哈希(置信度评分占位实现:基于内容哈希计算置信度)
sha2 = { workspace = true }

[dev-dependencies]
# 性能基准框架(SubTask 25.6)
# WHY async_tokio:启用 `Bencher::to_async` 方法,支持异步基准测试
criterion = { workspace = true, features = ["async_tokio"] }
# 属性测试框架(SubTask 25.5)
proptest = { workspace = true }
# tokio 测试工具
tokio-test = "0.4"
# JSON 序列化测试(config.rs serde 往返测试)
serde_json = { workspace = true }

# 性能基准配置:harness=false 以使用 criterion 自定义 main
[[bench]]
name = "produce_verify"
harness = false
